PC-9 Fixing page scroll to wrap all the page

--- a/src/components/containers/PlantCatalog/PlantCatalog.module.scss
+++ b/src/components/containers/PlantCatalog/PlantCatalog.module.scss
@@ -4,14 +4,14 @@
 // TODO: Fix data container (?) mobile view padding
 .PlantCatalog {
   height: 100vh;
+  overflow-y: auto;
   
   .Content {
     display: flex;
     flex-flow: row;
     max-width: 1200px;
-    height: calc(100% - 4rem);
+    min-height: calc(100% - 4rem);
     margin: 0 auto;
-    overflow: auto;
     padding: 40px 0;
     box-sizing: border-box;
 
